--- a/public/index.css
+++ b/public/index.css
@@ -25,99 +25,99 @@ body {
     border-bottom: 1px solid #ddd;
 }
 
-.logo-item {
-    align-self: start;
-    display: flex;
-    align-items: center; /* Выравнивание по центру внут элементов*/
-    gap: 8px; /* Расстояние между иконкой и текстом */
-    padding-top: 12px;
-    width: 175px;
-    height: 27px;
-}
+/*.logo-item {*/
+/*    align-self: start;*/
+/*    display: flex;*/
+/*    align-items: center; !* Выравнивание по центру внут элементов*!*/
+/*    gap: 8px; !* Расстояние между иконкой и текстом *!*/
+/*    padding-top: 12px;*/
+/*    width: 175px;*/
+/*    height: 27px;*/
+/*}*/
 
-.search-container {
-    align-self: center;
-    display: flex;
-    align-items: start;
-    margin: 0 0 0 calc((100% - 932px) / 2);
-    background: #EDEEF0;
-    border-radius: 8px;
-    width: 220px;
-    height: 32px;
-}
+/*.search-container {*/
+/*    align-self: center;*/
+/*    display: flex;*/
+/*    align-items: start;*/
+/*    margin: 0 0 0 calc((100% - 932px) / 2);*/
+/*    background: #EDEEF0;*/
+/*    border-radius: 8px;*/
+/*    width: 220px;*/
+/*    height: 32px;*/
+/*}*/
 
-.search-item {
-    border: none;
-    outline: none;
-    background: transparent;
-    align-items: start;
-    width: 220px;
-    height: 32px;
-    font-size: 14px;
-    padding-left: 8px;
-    flex-grow: 1; /* Поле ввода будет занимать оставшееся пространство */
-    text-align: left; /* Ьекст по левому краю */
-}
+/*.search-item {*/
+/*    border: none;*/
+/*    outline: none;*/
+/*    background: transparent;*/
+/*    align-items: start;*/
+/*    width: 220px;*/
+/*    height: 32px;*/
+/*    font-size: 14px;*/
+/*    padding-left: 8px;*/
+/*    flex-grow: 1; !* Поле ввода будет занимать оставшееся пространство *!*/
+/*    text-align: left; !* Ьекст по левому краю *!*/
+/*}*/
 
-.search-icon {
-    align-self: center;
-    width: 16px;
-    height: 16px;
-    margin-left: 8px; /* Расстояние между лупой и полем ввода */
-}
+/*.search-icon {*/
+/*    align-self: center;*/
+/*    width: 16px;*/
+/*    height: 16px;*/
+/*    margin-left: 8px; !* Расстояние между лупой и полем ввода *!*/
+/*}*/
 
-.search-icon-container {
-    align-self: center;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    width: 64px;
-    height: 20px;
-    padding-left: 24px;
-    gap: 24px; /* Расстояние между иконками */
-}
+/*.search-icon-container {*/
+/*    align-self: center;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: left;*/
+/*    width: 64px;*/
+/*    height: 20px;*/
+/*    padding-left: 24px;*/
+/*    gap: 24px; !* Расстояние между иконками *!*/
+/*}*/
 
-.notice-icon {
-    display: flex;
-    width: 20px;
-    height: 20px;
-    color: #FFFFFF;
-}
+/*.notice-icon {*/
+/*    display: flex;*/
+/*    width: 20px;*/
+/*    height: 20px;*/
+/*    color: #FFFFFF;*/
+/*}*/
 
-.music-icon-top {
-    width: 20px;
-    height: 20px;
-    /*color: #FFFFFF; /*увы, если цвет уже задан, так его поменять нельзя, но можно сделать
-    css для каждой иконки из меню, там покрасим ее, но кажется это нерационально"*/
-    /*margin-right: 8px;*/
-}
+/*.music-icon-top {*/
+/*    width: 20px;*/
+/*    height: 20px;*/
+/*    !*color: #FFFFFF; !*увы, если цвет уже задан, так его поменять нельзя, но можно сделать*/
+/*    css для каждой иконки из меню, там покрасим ее, но кажется это нерационально"*!*/
+/*    !*margin-right: 8px;*!*/
+/*}*/
 
-.avatar-container {
-    align-self: center;
-    justify-self: end;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding-left: 524px;
-    gap: 8px;
-    width: 66px;
-    height: 56px;
-}
+/*.avatar-container {*/
+/*    align-self: center;*/
+/*    justify-self: end;*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    align-items: center;*/
+/*    padding-left: 524px;*/
+/*    gap: 8px;*/
+/*    width: 66px;*/
+/*    height: 56px;*/
+/*}*/
 
-.avatar {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    aspect-ratio: 1 / 1; /*хз, без явного задания делал аву 35 на 40*/
-    object-fit: cover;
-}
+/*.avatar {*/
+/*    width: 40px;*/
+/*    height: 40px;*/
+/*    border-radius: 50%;*/
+/*    aspect-ratio: 1 / 1; !*хз, без явного задания делал аву 35 на 40*!*/
+/*    object-fit: cover;*/
+/*}*/
 
-.dropdown-button {
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-}
+/*.dropdown-button {*/
+/*    background: none;*/
+/*    border: none;*/
+/*    cursor: pointer;*/
+/*    font-size: 16px;*/
+/*}*/
 
 .side-menu {
     align-self: start;
@@ -144,30 +144,30 @@ body {
     cursor: pointer;
 }
 
-.menu-item:hover {
-    background: #f0f0f0;
-    border-radius: 4px;
-}
+/*.menu-item:hover {*/
+/*    background: #f0f0f0;*/
+/*    border-radius: 4px;*/
+/*}*/
 
 .container {
     display: flex;
 }
 
-.menu-item {
-    display: flex;
-    align-items: center; /* Выравнивание по центру */
-    gap: 8px; /* Расстояние между иконкой и текстом */
-    overflow-y: auto;
-    padding-left: 12px;
-    width: 196px;
-    height: 32px;
-    margin: 8px;
-}
+/*.menu-item {*/
+/*    display: flex;*/
+/*    align-items: center; !* Выравнивание по центру *!*/
+/*    gap: 8px; !* Расстояние между иконкой и текстом *!*/
+/*    overflow-y: auto;*/
+/*    padding-left: 12px;*/
+/*    width: 196px;*/
+/*    height: 32px;*/
+/*    margin: 8px;*/
+/*}*/
 
-.menu-icon {
-    width: 16px;
-    height: 16px;
-}
+/*.menu-icon {*/
+/*    width: 16px;*/
+/*    height: 16px;*/
+/*}*/
 
 main {
     display: flex;
@@ -196,13 +196,13 @@ a {
 /*    margin-bottom: 20px; !* Отступ снизу между пунктами *!*/
 /*}*/
 
-input {
-    display: block;
-    height: 60px;
-    font-size: 40px;
-    margin-bottom: 15px;
+/*input {*/
+/*    display: block;*/
+/*    height: 60px;*/
+/*    font-size: 40px;*/
+/*    margin-bottom: 15px;*/
 
-}
+/*}*/
 
 .active {
     font-weight: bold;
