--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,9 @@
 body {
-    background-color: #FFF;
+    background-color: #fff;
     /*background: radial-gradient(100% 316.05% at 0% 0%, #CED8FF 0%, #4369FC 100%) для авторизации*/
-    font-family: VK Sans Display, sans-serif;
+    font-family:
+        VK Sans Display,
+        sans-serif;
 }
 
 .menu {
@@ -14,15 +16,22 @@ body {
 }
 
 .header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    position: fixed; /* Фиксируем хедер */
-    top: 0; /* Прижимаем к верху */
-    width: 100%; /* Растягиваем на всю ширину */
-    padding: 10px 20px; /* Дополнительные отступы, можно настроить */
+    /*display: flex;*/
+    /*flex-direction: row;*/
+    /*align-items: center;*/
+    /*position: fixed; !* Фиксируем хедер *!*/
+    /*top: 0; !* Прижимаем к верху *!*/
+    /*width: 100%; !* Растягиваем на всю ширину *!*/
+    /*padding: 10px 20px; !* Дополнительные отступы, можно настроить *!*/
     background: white;
     border-bottom: 1px solid #ddd;
+    display: flex;
+    position: fixed;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 56px;
+    align-items: center;
 }
 
 /*.logo-item {*/
@@ -185,7 +194,6 @@ main {
     gap: 20px; /* Отступ между картинками */
 }
 
-
 a {
     display: block;
     color: #333333;
@@ -207,5 +215,3 @@ a {
 .active {
     font-weight: bold;
 }
-
-
