--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,13 @@
+@import url(./Components/constants.css);
+@import url(./Components/ButtonComponent/ButtonComponent.css);
+@import url(./Components/LoginFormComponent/LoginFormComponent.css);
+@import url(./Components/SignupFormComponent/SignupFormComponent.css);
+@import url(./Components/RadioComponent/RadioComponent.css);
+
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #FFF;
     /*background: radial-gradient(100% 316.05% at 0% 0%, #CED8FF 0%, #4369FC 100%) для авторизации*/
@@ -209,3 +219,28 @@ a {
 }
 
 
+
+
+
+
+
+
+
+h1 {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 130%;
+    color: var(--text-primary);
+    margin: 0;
+}
+
+.p1 {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 130%;
+    text-align: center;
+    color: var(--text-secondary);
+    margin: 0;
+}
