--- a/public/Components/LoginFormComponent/LoginFormComponent.css
+++ b/public/Components/LoginFormComponent/LoginFormComponent.css
@@ -17,7 +17,7 @@ fieldset {
     margin: 0;
 }
 
-.login-email {
+.login-username {
     display: flex;
     flex-direction: column;
     gap: 12px;
