--- a/public/Components/MenuComponent/MenuComponent.css
+++ b/public/Components/MenuComponent/MenuComponent.css
@@ -49,3 +49,30 @@ aside {
     font-weight: 500;
     color: var(--text-accent);
 }
+
+.hide-interface header,
+.hide-interface aside {
+    display: none;
+}
+
+.hide-interface main {
+    padding: 24px 64px;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 128px;
+    background: radial-gradient(331.49% 141.42% at 0% 0%, #ced8ff 0%, #4369fc 100%);
+}
+
+.auth-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
