--- a/public/index.css
+++ b/public/index.css
@@ -10,12 +10,26 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: 'vk-sans';
+    src: url('../static/fonts/VKSansDisplay-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'vk-sans';
+    src: url('../static/fonts/VKSansDisplay-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
 body {
     background-color: #fff;
     /*background: radial-gradient(100% 316.05% at 0% 0%, #CED8FF 0%, #4369FC 100%) для авторизации*/
-    font-family:
-        VK Sans Display,
-        sans-serif;
+    font-family: 'vk-sans';
 }
 
 /*.logo-item {*/
