add saving data in login form

--- a/public/Components/UI/InputComponent/InputComponent.css
+++ b/public/Components/UI/InputComponent/InputComponent.css
@@ -65,6 +65,10 @@ input[type='password']:focus {
     outline: none;
 }
 
+input:focus::placeholder {
+    color: transparent;
+}
+
 input.invalid {
     border: 1px solid var(--stroke-error) !important;
     background: var(--background-error) !important;
