--- a/public/Components/UI/RadioComponent/RadioComponent.css
+++ b/public/Components/UI/RadioComponent/RadioComponent.css
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 40px;
 }
 
 .choice {
@@ -29,7 +30,6 @@
     align-items: center;
     gap: 8px;
     color: var(--text-primary);
-    width: -webkit-fill-available;
 }
 
 input[type='radio'] {
