--- a/public/Components/PostComponent/PostComponent.css
+++ b/public/Components/PostComponent/PostComponent.css
@@ -1,10 +1,3 @@
-.feed {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 48px;
-}
-
 .post {
     display: flex;
     flex-direction: column;
@@ -19,7 +12,7 @@
     flex-direction: column;
     align-items: flex-start;
 
-    padding-top: 16px;
+    margin-top: 16px;
 }
 
 .post-text-content {
@@ -65,6 +58,7 @@
     gap: 8px;
     padding-bottom: 12px;
     justify-content: space-between;
+    position: relative;
 }
 
 .post-author-wrapper {
@@ -91,15 +85,10 @@
     gap: 8px;
 }
 
-/* убрать потом */
-.a-btn {
-    color: var(--text-secondary-disabled);
-    cursor: default;
-}
-
-/* .a-btn:hover {
+.a-btn:hover {
     color: var(--text-accent-hover);
-} */
+    transition: var(--trans-menu);
+}
 
 .post-options-wrapper {
     width: 32px;
@@ -107,13 +96,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* cursor: pointer; */
+    cursor: pointer;
     border-radius: 50%;
+    transition: var(--trans-dropdown);
 }
 
-/* .post-options-wrapper:hover {
-    background-color: var(--background-light-gray);
-} */
+.dropdown:hover .post-options-wrapper:active {
+    background: var(--background-gray);
+}
+
+.dropdown:hover .post-options-wrapper {
+    background: var(--background-light-gray);
+}
 
 .post-options {
     background: url(../../static/img/options-icon.svg) 0 0 no-repeat;
@@ -123,6 +117,10 @@
 
 .post-pics-wrapper {
     display: flex;
+    overflow: hidden;
+    width: 553px;
+    position: relative;
+    border-radius: 8px;
 }
 
 .post-pic {
@@ -136,8 +134,9 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    gap: 20px;
     padding: 16px 0;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .post-action-wrapper {
@@ -174,7 +173,7 @@
     height: 22px;
 }
 
-.post-bookmark {
+.post-action-bookmark {
     background: url(../../static/img/bookmark-icon.svg) 0 0 no-repeat;
     width: 22px;
     height: 22px;
@@ -186,4 +185,67 @@
     font-size: 16px;
     line-height: 100%;
     color: var(--text-secondary);
+}
+
+.post-nav-btn {
+    position: absolute;
+    background: var(--background-white);
+    align-self: anchor-center;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    opacity: 0.5;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.post-pics-slider {
+    display: flex;
+    flex-direction: row;
+    transition: var(--trans-post-slider);
+}
+
+.post-nav-btn:hover {
+    opacity: 0.65;
+    transition: var(--trans-menu);
+}
+
+.post-nav-btn:active {
+    opacity: 0.8;
+    transition: var(--trans-menu);
+}
+
+.post-prev-btn {
+    left: 12px;
+}
+
+.post-next-btn {
+    right: 12px;
+}
+
+.hidden {
+    display: none;
+    pointer-events: none;
+}
+
+.post-actions-counted {
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
+    align-items: center;
+}
+
+.post-pics-paginator {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    border-radius: 100px;
+    padding: 4px 8px;
+    background: var(--background-black-transparent);
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    color: var(--text-white);
 }
