--- a/public/Components/AvatarComponent/AvatarComponent.css
+++ b/public/Components/AvatarComponent/AvatarComponent.css
@@ -1,13 +1,82 @@
+.avatar-wrapper {
+    display: flex;
+    box-sizing: content-box;
+}
+
 .avatar {
-    width: 32px;
-    height: 32px;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     aspect-ratio: 1 / 1;
     object-fit: cover;
     cursor: pointer;
 }
 
-.avatar.s {
+.avatar-wrapper.xxs {
+    width: 28px;
+    height: 28px;
+}
+
+.avatar-wrapper.xs {
+    width: 32px;
+    height: 32px;
+}
+
+.avatar-wrapper.s {
     width: 40px;
     height: 40px;
+}
+
+.avatar-wrapper.m {
+    width: 48px;
+    height: 48px;
+}
+
+.avatar-wrapper.l {
+    width: 56px;
+    height: 56px;
+}
+
+.avatar-wrapper.xl {
+    width: 64px;
+    height: 64px;
+}
+
+.avatar-wrapper.xxl {
+    width: 80px;
+    height: 80px;
+}
+
+.avatar-wrapper.xxxl {
+    width: 150px;
+    height: 150px;
+}
+
+.avatar-status-online {
+    position: absolute;
+    bottom: 8px;
+    right: 8px;
+    background: var(--icon-green);
+    border: 4px solid var(--stroke-white);
+    box-sizing: content-box;
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+}
+
+.avatar-status-offline {
+    position: absolute;
+    bottom: -4px;
+    right: -4px;
+
+    box-sizing: content-box;
+    background: var(--background-gray);
+    border: 4px solid var(--stroke-white);
+    border-radius: 1000px;
+    padding: 2px 8px;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 130%;
+    color: var(--text-secondary);
 }
