--- a/public/index.css
+++ b/public/index.css
@@ -1,14 +1,20 @@
 @import url(./Components/constants.css);
+
 @import url(./Components/UI/ButtonComponent/ButtonComponent.css);
 @import url(./Components/UI/RadioComponent/RadioComponent.css);
+@import url(./Components/UI/ModalWindowComponent/ModalWindowComponent.css);
+@import url(./Components/UI/TextareaComponent/TextareaComponent.css);
+
 @import url(./Components/LoginFormComponent/LoginFormComponent.css);
 @import url(./Components/SignupFormComponent/SignupFormComponent.css);
 @import url(./Components/PostComponent/PostComponent.css);
 @import url(./Components/AvatarComponent/AvatarComponent.css);
 @import url(./Components/ContextMenuComponent/ContextMenuComponent.css);
 @import url(./Components/ProfileMenuComponent/ProfileMenuComponent.css);
+@import url(./Components/MainLayoutComponent/MainLayoutComponent.css);
 
 @import url(./Views/FeedView/FeedView.css);
+@import url(./Views/ProfileView/ProfileView.css);
 
 * {
     box-sizing: border-box;
