--- a/public/Components/MainLayoutComponent/MainLayoutComponent.css
+++ b/public/Components/MainLayoutComponent/MainLayoutComponent.css
@@ -4,7 +4,7 @@
     display: flex;
 }
 
-.container.default {
+.container.feed {
     flex-direction: row;
     align-items: flex-start;
     gap: 16px;
