--- a/public/Views/FeedView/FeedView.css
+++ b/public/Views/FeedView/FeedView.css
@@ -61,6 +61,12 @@
     background: var(--background-gray);
 }
 
+.post-create-icon {
+    width: 20px;
+    height: 20px;
+    background: url('../../static/img/add-icon.svg');
+}
+
 .feed-posts-wrapper {
     display: flex;
     flex-direction: column;
